# ranasi

./: .env.development  .env.production  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
api/: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.yml  railway.toml
api/migrations/: 001_init.sql
api/scripts/: create_tables.sql
api/src/: config.rs  db.rs  error.rs  main.rs  models.rs
api/src/routes/: fill.rs  health.rs  license.rs  mod.rs  webhook.rs
api/src/services/: lemon.rs  mod.rs  openai.rs
entrypoints/: background.ts  content.ts
entrypoints/newtab/: App.tsx  index.html  main.tsx  style.css
entrypoints/newtab/components/: AddSiteModal.tsx  ContextMenu.tsx  SiteTile.tsx  ThemePicker.tsx
entrypoints/options/: OptionsApp.tsx  index.html  main.tsx  options.css
lib/: ai-fill.ts  config.ts  domain.ts  entitlements.ts  fill-engine.ts  license.ts  messages.ts  profile.ts  storage.ts  themes.ts  types.ts
lib/i18n/: index.ts
lib/i18n/locales/: en.ts
public/_locales/en/: messages.json
store-listing/: CHROME_PRIVACY_FORM.md  LEMON_SETUP.md  SCREENSHOTS_UPLOAD.md  SEO_GUIDE.md  STORE_LISTING.md  UPLOAD_THESE.txt  generate_assets.py
web/: .env.example  .env.production  next.config.ts  package.json
web/public/: demo-form.html
web/src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: AutoFillDemo.tsx  JsonLd.tsx  ProductShowcase.tsx  SiteChrome.tsx
web/src/lib/: checkout.ts  cors.ts  extension.ts  lemonsqueezy.ts
(+18 files in other folders)
